--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ repositories {
 dependencies {
     implementation 'io.netty:netty-all:4.1.94.Final'
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'io.netty:netty-tcnative-boringssl-static:2.0.61.Final'
 
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
